server/public/weather.css
/* ... */
@media (min-width: 481px) and (max-width: 790px){

    header {
        text-align: center;
        font-size: 2.8em;
        color: white;
        padding-top: 1.5em;
        padding-bottom: 1.5%;
        width: 100%;
        line-height: 1.2;
    }

    h2 {
        text-align: center;
        font-size: 2.2em;
        font-weight: 700;
        color: #2D3091;
        padding-bottom: 4%;
        width: 100%;
        margin-right: 2%;
    }

    .top-half {
        display: flex;
        flex-wrap: wrap;
        width: 100%;
        font-family: 'IBM Plex Sans', sans-serif;
        color: white;
        background-image: linear-gradient(#4980dc, #623b9c);
    }

    /* gradient not used for mobile */
    /* on non-mobile views, use flex-direction: row */
    .bottom-half {
        display: flex;
        flex-direction: row;
        width: 100%;
        font-family: 'Saira Extra Condensed', sans-serif;
        background-image: linear-gradient(gray 0%, white 25%);
    }

    /*On non-mobile views, use flex-direction: column*/
    .bottom-item {
        display: flex;
        flex-direction: column;
        width: 20%;
        font-weight: 300;
        justify-content: center;
        margin-left: 4%;
    }

    .bottom-item-time {
        font-size: 4vw;
        margin-top: 50%;
    }

    .bottom-item-image {
        display: block;
        width: 75%;
        margin-top: 50%;
        margin-bottom: 50%;
    }

    .bottom-item-temperature {
        font-size: 10vw;
    }

    main {

    }

    /* For non-mobile views, set to be "display: none;" */
    .mobile-header-text {
        display: none;
    }

    .non-mobile-header-text {
        display: block;
    }

    /* For non-mobile views: change flex-direction to column, and use flex-wrap */
    .forecast {
        flex-direction: column;
        flex-wrap: wrap;
        width: 100%;
    }

    div.forecast-input-container {
        display: flex;
        flex-direction: row;
        width: 100%;
    }

    p.forecast-text {
        font-size: 1.5em;
        text-align: left;
        margin-left: 15%;
        padding-bottom: 22px;
    }

    .input-container {
        display: flex;
        flex-direction: row;
        width: 60%;
    }

    .input-field {
        text-align: center;
        font-size: x-large;
        width: 75%;
        margin-left: 3%;
        height: 1.38em;
        border: none;
        font-family: 'IBM Plex Sans', sans-serif;
        font-weight: 300;
        color: white;
        background-color: #2E3192;
    }

    .button-style {
        width: 25%;
        height: 1.8em;
        margin-left: 5%;
        text-align: center;
        font-size: larger;
        color: #E6E5E3;
        border: none;
        background-color: #7B92D5;
    }

    .weather-and-doppler-container {
        display: flex;
        flex-direction: row;
        justify-content: space-around;
    }

    .weather {
        flex-direction: column;
        width: 60%;
        margin-left: 10%;
        
    }

    .current-image {
        padding-top: 50px;
        padding-bottom: 30px;
        width: 20vw;
        margin-left: 3.5em;

    }

    .time-and-temp {
        display: flex;
        flex-direction: row;
        font-family: 'Saira Extra Condensed', sans-serif;
        font-weight: 100;
        line-height: 1.3;
        text-align: center;
        width: 100%;
        padding-bottom: 2em;
    }

    .time {
        flex-direction: column;
        font-size: 3em;
        margin-top: 10px;
    }


    .vertical-line {
        color: black;
        font-size: 7em;
        font-weight: 100;
        padding-left: 20px;
        padding-right: 20px;
    }

    .temperature {
        font-size: 7em;
        font-family: 'Saira Extra Condensed', sans-serif;
    }

    /* hide this on mobile-view */
    .doppler {
        position: relative;
        display: flex;
        width: 60%;
        margin-bottom: 10%;
        margin-top: 20%;
    }

    img.doppler {
        position: absolute;
        width: 100%;
        filter: grayscale(100%);
        clip-path: circle(40%);
        bottom: 0;
        right: 0;
    }

    .doppler-gif {
      position: absolute;
      width: 100%;
      clip-path: circle(40%);
      margin-bottom: 2em;
      margin-right: 0.2em;
      bottom: 0;
      right: 0;
  }

    .arrow-container {
        width: 0%;
        padding-bottom: 1.5em;
        padding-top: 1.5em;
    }

    .arrow-img {
        display: none;
        width: 0%;
        margin: auto;
    }

    hr {
        border: none;
        border-left: 1px solid darkslategrey;
        height: 50vh;
        width: 1px;
    }
}
/* ... */

